--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     <main>
 	 <header><h3>A JavaScript Project by Mahad</h3></header>
 	<h3 id="my-greeting">Greeting Goes Here</h3>
-	    <p>Explain what your page does and how it works here!</p>
+	    <p>I created a web page that uses HTML, CSS, JavaScript to determine the current hour, and presents a custom message, a different image,
+		and color based on each of the following times of day.</p>
 	<img id="my-pic" src="http://dummyimage.com/300x400" alt="Time of Day Image" class="flexible">
      <footer>
       <p><small>&copy; 2023 by 
